hphp/hack/test/typecheck/xhp_deep_parse.php.exp
File "xhp_deep_parse.php", line 15, characters 15-18:
Unbound name: :x:xy (an object type) (Naming[2049])
