hphp/hack/test/typecheck/xhp_deep_parse.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the BSD-style license found in the
 * LICENSE file in the "hack" directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 *
 */

class :x:xx {}

function test(): void {
  $x = <x:xx><x:xy></x:xy></x:xx>;
}
